--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
     inputs:
       targetType: 'inline'
       script: |
-        [xml]$manifest= get-content ".\src\Terminal.Package\Package.appxmanifest"
+        [xml]$manifest= get-content ".\src\Terminal\Package.appxmanifest"
         $manifest.Package.Identity.Version = "$(packageVersion).$(Build.BuildId)"
         $manifest.Package.Identity.Name = "demo-864d9095-955f-4d3c-adb0-6574a5acb88b$(packageIdSuffix)"
         $manifest.Package.Properties.DisplayName = "$(packageName)$(packageNameSuffix)"
