Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ jobs:
 
   - task: Docker@2
     inputs:
-      command: 'buildAndPush'
+      command: 'build'
       Dockerfile: '**/Dockerfile'
 
   - task: PublishBuildArtifacts@1
