--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,17 +36,39 @@ jobs:
         $manifest.Package.Applications.Application.VisualElements.DisplayName = "$(packageName)$(packageNameSuffix)"
         $manifest.save("Terminal\Package.appxmanifest")
 
+  - task: DownloadSecureFile@1
+    name: mySecureFile
+    displayName: 'Download CA certificate'
+    inputs:
+      secureFile: 'Terminal_TemporaryKey.pfx'
+  
+  - task: PowerShell@2
+    inputs:
+      targetType: 'inline'
+      script: |
+        Write-Host "Start adding the PFX file to the certificate store."
+        $pfxpath = '$(mySecureFile.secureFilePath)'
+        $password = '$(mySecureFile.password)'      
+        Add-Type -AssemblyName System.Security
+        $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
+        $cert.Import($pfxpath, $password, [System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]"PersistKeySet")
+        $store = new-object system.security.cryptography.X509Certificates.X509Store -argumentlist "MY", CurrentUser
+        $store.Open([System.Security.Cryptography.X509Certificates.OpenFlags]"ReadWrite")
+        $store.Add($cert)
+        $store.Close()
+    displayName: 'Install PFX File'
+
   - task: VSBuild@1
     inputs:
       solution: '$(solution)'
-      msbuildArgs: '/restore /p:AppInstallerUri=$(msixInstallUrl)/$(channelName) /p:AppxPackageDir="$(Build.ArtifactStagingDirectory)/$(channelName)" /p:UapAppxPackageBuildMode=StoreAndSideload /p:GenerateAppInstallerFile=true /p:PackageCertificateKeyFile="Terminal_TemporaryKey.pfx" /p:PackageCertificatePassword="secret"'
+      msbuildArgs: '/restore /p:AppInstallerUri=$(msixInstallUrl)/$(channelName) /p:AppxPackageDir="$(Build.ArtifactStagingDirectory)/$(channelName)" /p:UapAppxPackageBuildMode=StoreAndSideload /p:GenerateAppInstallerFile=true /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)" /p:PackageCertificatePassword="$(mySecureFile.secret)"'
       platform: '$(buildPlatform)'
       configuration: '$(buildConfiguration)'
 
-  - task: Docker@2
-    inputs:
-      command: 'build'
-      Dockerfile: '**/Dockerfile'
+  #- task: Docker@2
+  #  inputs:
+  #    command: 'build'
+  #    Dockerfile: '**/Dockerfile'
 
   - task: PublishBuildArtifacts@1
     inputs:
