--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ jobs:
       script: |
         Write-Host "Start adding the PFX file to the certificate store."
         $pfxpath = '$(mySecureFile.secureFilePath)'
-        $password = '$(mySecureFile.password)'      
+        $password = '$(mySecureFile.secret)'      
         Add-Type -AssemblyName System.Security
         $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
         $cert.Import($pfxpath, $password, [System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]"PersistKeySet")
