--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,6 +48,7 @@ jobs:
       script: |
         Write-Host "Start adding the PFX file to the certificate store."
         $pfxpath = '$(mySecureFile.secureFilePath)'
+        echo '$(mySecureFile.secret)'
         $password = '$(mySecureFile.secret)'      
         Add-Type -AssemblyName System.Security
         $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
