--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,6 +76,12 @@ jobs:
   #  inputs:
   #    command: 'build'
   #    Dockerfile: '**/Dockerfile'
+  - task: CopyFiles@2
+    displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
+    inputs:
+      SourceFolder: '$(system.defaultworkingdirectory)'
+      Contents: '**\bin\$(buildConfiguration)\**'
+      TargetFolder: '$(build.artifactstagingdirectory)'
 
   - task: PublishBuildArtifacts@1
     inputs:
