--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,7 @@ jobs:
         Write-Host "Start adding the PFX file to the certificate store."
         $pfxpath = '$(mySecureFile.secureFilePath)'
         $password = '$(password)'
+        echo '$(mySecureFile.secureFilePath)'
         echo '$(password)'
         Add-Type -AssemblyName System.Security
         $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
