Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,16 +21,6 @@ variables:
 
 jobs: 
 - job: BuildMSIX
-  strategy: 
-    matrix: 
-      Preview:
-        channelName: 'preview'
-        packageIdSuffix: '-preview'
-        packageNameSuffix: ' [PREVIEW]'
-      Production:
-        channelName: 'production'
-        packageIdSuffix: ''
-        packageNameSuffix: ''
   steps:
   - task: PowerShell@2
     inputs:
@@ -38,9 +28,9 @@ jobs:
       script: |
         [xml]$manifest= get-content "Terminal\Package.appxmanifest"
         $manifest.Package.Identity.Version = "$(packageVersion).$(Build.BuildId)"
-        $manifest.Package.Identity.Name = "demo-864d9095-955f-4d3c-adb0-6574a5acb88b$(packageIdSuffix)"
-        $manifest.Package.Properties.DisplayName = "$(packageName)$(packageNameSuffix)"
-        $manifest.Package.Applications.Application.VisualElements.DisplayName = "$(packageName)$(packageNameSuffix)"
+        $manifest.Package.Identity.Name = "demo-864d9095-955f-4d3c-adb0-6574a5acb88b$(packageVersion).$(Build.BuildId)"
+        $manifest.Package.Properties.DisplayName = "$(packageName))"
+        $manifest.Package.Applications.Application.VisualElements.DisplayName = "$(packageName)"
         $manifest.save("Terminal\Package.appxmanifest")
 
   - task: DownloadSecureFile@1
