--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 variables:
-- group: 'systray-pipeline' # variable group
+- group: 'Certificate' # variable group
 - name: 'buildPlatform'
   value: 'x64'
 - name: 'buildConfiguration'
@@ -31,10 +31,10 @@ steps:
     feedsToUse: 'select'
 
 - task: DownloadSecureFile@1
-  inputs:
-    secureFile: '$(signingCert.secureFilePath)'
-  displayName: 'Download Secure PFX File'
   name: mySecureFile
+  displayName: 'Download CA certificate'
+  inputs:
+    secureFile: 'Terminal_TemporaryKey.pfx'
 
 - task: PowerShell@2
   inputs:
@@ -42,7 +42,7 @@ steps:
     script: |
       Write-Host "Start adding the PFX file to the certificate store."
       $pfxpath = '$(mySecureFile.secureFilePath)'
-      $password = '$(signingCert.password)'      
+      $password = '$(password)'      
       Add-Type -AssemblyName System.Security
       $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
       $cert.Import($pfxpath, $password, [System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]"PersistKeySet")
