--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 variables:
-- group: 'Certificate' # variable group
+- group: 'Certificate'
 - name: 'buildPlatform'
   value: 'x64'
 - name: 'buildConfiguration'
@@ -40,7 +40,7 @@ steps:
     script: |
       Write-Host "Start adding the PFX file to the certificate store."
       $pfxpath = '$(mySecureFile.secureFilePath)'
-      $password = '$(password)'      
+      $password = '$(password)'
       Add-Type -AssemblyName System.Security
       $cert = New-Object System.Security.Cryptography.X509Certificates.X509Certificate2
       $cert.Import($pfxpath, $password, [System.Security.Cryptography.X509Certificates.X509KeyStorageFlags]"PersistKeySet")
