--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,7 @@ jobs:
     inputs:
       targetType: 'inline'
       script: |
-        [xml]$appInst = get-content "$(Build.ArtifactStagingDirectory.Terminal.appinstaller)"
+        [xml]$appInst = get-content "$(Build.ArtifactStagingDirectory\Terminal.appinstaller)"
         $appInst.AppInstaller.UpdateSettings.OnLaunch.HoursBetweenUpdateChecks="1"
         $appInst.save("$(Build.ArtifactStagingDirectory.Terminal.appinstaller)")
   - task: PublishBuildArtifacts@1
