--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,9 +65,9 @@ jobs:
     inputs:
       targetType: 'inline'
       script: |
-        [xml]$appInst = get-content "$(Build.ArtifactStagingDirectory)\*.appinstaller"
+        [xml]$appInst = get-content "$(Build.ArtifactStagingDirectory)\Terminal_x64.appinstaller"
         $appInst.AppInstaller.UpdateSettings.OnLaunch.HoursBetweenUpdateChecks="1"
-        $appInst.save("$(Build.ArtifactStagingDirectory)\*.appinstaller")
+        $appInst.save("$(Build.ArtifactStagingDirectory)\Terminal_x64.appinstaller")
   - task: PublishBuildArtifacts@1
     inputs:
       PathtoPublish: '$(Build.ArtifactStagingDirectory)'
