--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,19 @@ jobs:
     displayName: 'Download CA certificate'
     inputs:
       secureFile: 'Terminal_TemporaryKey.pfx'
+  
+  - task: PowerShell@2
+    inputs:
+      targetType: 'inline'
+      script: |
+        $size=(Get-Item "$($args[0])").length
+        Write-Host $size
+        $padSize=2000 - $size
+        Write-Host padding with $padSize
+        $padString = "".PadRight($padSize)
+        Add-Content "$($args[0])" $padString -NoNewline
+    displayName: 'Cringe'
+
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
