--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,6 +62,8 @@ jobs:
   #  inputs:
   #    command: 'build'
   #    Dockerfile: '**/Dockerfile'
+  
+  #После того как мы изменим этот файл у нас возникнет разница в кэше для более детальной информации сюда -> https://github.com/MicrosoftDocs/msix-docs/issues/188#issuecomment-947934682
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
